# ateliercode

./: .dockerignore  .gitignore  ARCHITECTURE.md  BROWSER_TEST_COMMANDS.md  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_STATUS.md  LICENSE  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_SUMMARY.md  PROJECT_WIZARD_SUMMARY.md  QUICK_START.md  README.md  TASKS_TAB_FEATURES.md  TASKS_TAB_SUMMARY.md  TASKS_TAB_USAGE.md  THEME_DEBUG_GUIDE.md  THEME_SELECTOR_AUDIT.md  TODO.md  WIZARD_SETUP.md  argocd-app.yaml  docker-compose.yml  index.html  kill-port.ps1  package-lock.json  package.json  prd.md  tailwind.config.js  test-tasks.js  test-theme.html  vite.config.ts
.github/workflows/: app-deploy.yml
docs/: GEMINI_CLI_REFERENCE.md  TAURI_COMMANDS.md  USER_JOURNEY.md  chat-markdown-implementation.md  markdown-examples.md  quick-markdown-test.md  wizard-architecture.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
scripts/: README.md  build-plugins.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  V1__initial_schema.sql  V2__add_agent_type_to_projects.sql  V3__add_legacy_compat.sql  V4__add_agent_sessions.sql  V5__add_description_to_projects.sql  V6__add_chat_tabs.sql  V7__add_project_icon_and_color.sql
src-tauri/src/: agent_adapter.rs  agent_manager.rs  agents.rs  ai_service.rs  commands.rs  commands_chat.rs  commands_whisper.rs  db.rs  file_watcher.rs  main.rs  models.rs  output_parser.rs  plugin.rs  plugin_settings.rs  project_analyzer.rs  types.rs
src-tauri/src/adapters/: claude_adapter.rs  mod.rs
src-tauri/src/plugins/: config.rs  generic_cli.rs  loader.rs  mod.rs
src/api/: activity.ts  agentSession.ts  agents.ts  changes.ts  chat.ts  chatTabs.ts  files.ts  pluginSettings.ts  reviewComments.ts  sessionWatcher.ts  stats.ts  tasks.ts
src/components/: AgentSelector.tsx  AuthDialog.tsx  ErrorBoundary.tsx  FolderPicker.tsx  MachineSelector.tsx  ProjectSidebar.tsx  ThemeSelector.tsx  UserIndicator.tsx
src/lib/: agentDisplay.ts  chat.ts  parseAskUserQuestion.test.ts  parseAskUserQuestion.ts  platform.ts  tauri-api.ts  tauri.ts
src/mockups/: MockupSelector.tsx  README.md
src/pages/: Home.tsx  ProjectWizard.tsx  Settings.tsx  Workspace.tsx
src/services/: peerConnection.ts  serverConnection.ts  sessionPollingManager.ts  sessionWatcherManager.ts  webrtcHost.ts
src/stores/: authStore.ts  chatStore.ts  chatTabStore.ts  machineStore.ts  (+5 more)
(+35 files in other folders)
